--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -8,5 +8,10 @@
 <div class="example-wrapper">
     <h1>Hello {{ controller_name }}! ✅</h1>
 
-    
+    This friendly message is coming from:
+    <ul>
+        <li>Abidjan <code><a href="{{ absolute_url(path('abidjan_index')) }}">Jambognan</a></code></li>
+        <li>Your template at <code><a href="{{ '/home/delrodie/www/applications/ascci/campsregionaux/templates/home/index.html.twig'|file_link(0) }}">templates/home/index.html.twig</a></code></li>
+    </ul>
+</div>
 {% endblock %}
