--- a/templates/abidjan/index.html.twig
+++ b/templates/abidjan/index.html.twig
@@ -1,4 +1,4 @@
-{% extends 'base.html.twig' %}
+{% extends 'abidjan/abidjan_layout.html.twig' %}
 
 {% block title %}Hello AbidjanController!{% endblock %}
 
@@ -11,7 +11,7 @@
 <div class="example-wrapper">
     <h1>Bienvenue à {{ region.nom }}! ✅</h1>
 
-    Entrez votre matricule :
-    
+    Entrez votre matricule : {{ include('home/_search_form.html.twig') }}
+
 </div>
 {% endblock %}
