Enregistrement dans la table paiement

--- a/templates/abidjan/inscription.html.twig
+++ b/templates/abidjan/inscription.html.twig
@@ -10,7 +10,7 @@
     <div class="example-wrapper">
         <h1>Inscription! ✅</h1>
 
-        <form action="{{ absolute_url(path('app_inscription')) }}" method="post">
+        <form action="{{ absolute_url(path('app_inscription')) }}" id="inscription" name="inscription" method="post">
             <div class="form-group">
 
                 <label for="matricule">Matricule</label>
