Gestion des Config

--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -11,6 +11,8 @@
     This friendly message is coming from:
     <ul>
         <li>Abidjan <code><a href="{{ absolute_url(path('abidjan_index')) }}">Jambognan</a></code></li>
+        <li>Backend <code><a href="{{ absolute_url(path('backend_activite_index')) }}">Activite</a></code></li>
+        <li>Backend <code><a href="{{ absolute_url(path('backend_config_index')) }}">Config</a></code></li>
     </ul>
 </div>
 {% endblock %}
