--- a/templates/abidjan/inscription.html.twig
+++ b/templates/abidjan/inscription.html.twig
@@ -1,66 +1,121 @@
-{% extends 'abidjan/abidjan_layout.html.twig' %}
+{% extends 'layout.html.twig' %}
 
 {% block title %}{{ parent()}} Inscription au camp{% endblock %}
 
+{% block menu %}
+    {{ include('abidjan/menu_abidjan.html.twig') }}
+{% endblock %}
+{% block style %}
+    {{ include('style.html.twig',{'couleurRGB': config.rgb, 'couleurTheme': config.theme}) }}
+{% endblock %}
+
 {% block body %}
-    <style>
-        .example-wrapper { margin: 1em auto; max-width: 800px; width: 95%; font: 18px/1.5 sans-serif; }
-        .example-wrapper code { background: #F5F5F5; padding: 2px 6px; }
-    </style>
-    <div class="example-wrapper">
-        <h1>Inscription! ✅</h1>
+    <section class="inner-header-bg">
+        <div class="container">
+            <!-- Breadcrumb Start-->
+            <div class="section-breadcrumb">
+                <div class="container">
+                    <div class="row">
+                        <div class="col-md-12 justify-content-center align-self-center pb-2">
+                            <div class="breadcrumb-content">
 
-        <form action="{{ absolute_url(path('app_inscription')) }}" id="inscription" name="inscription" method="post">
-            <div class="form-group">
-
-                <label for="matricule">Matricule</label>
-                <input type="text" name="inscription_matricule" class="form-control" value="{{ scout.matricule }}" readonly>
-
-                <label for="carte">Carte</label>
-                <input type="text"  name="inscription_carte" class="form-control" value="{{ scout.carte }}" readonly>
-
-                <label for="nom">Nom</label>
-                <input type="text" name="inscription_nom" class="form-control" value="{{ scout.nom }}" readonly>
-
-                <label for="prenom">Prenom</label>
-                <input type="text" name="inscription_prenom" class="form-control" value="{{ scout.prenoms }}" readonly>
-
-                <label for="sexe">Sexe</label>
-                <input type="text" name="inscription_sexe" class="form-control" value="{{ scout.sexe }}" readonly>
-
-                <label for="date_naissance">Date de naissance</label>
-                <input type="text" name="inscription_date_naissance" class="form-control" value="{{ scout.dateNaiss }}" readonly>
-
-                <label for="lieu_naissance">Lieu de naissance</label>
-                <input type="text" name="inscription_lieu_naissance" class="form-control" value="{{ scout.lieuNaiss }}" readonly>
-
-                <label for="fonction">Fonction</label>
-                <input type="text" name="inscription_fonction" class="form-control" value="{{ scout.fonction }}" readonly>
-
-                <label for="inscription_district">Selectionnez le district du camp</label>
-                <select name="district" id="inscription_district" class="form-control" required>
-                    <option value="">--</option>
-                    {% for district in districts %}
-                        <option value="{{ district.id }}">{{ district.nom }}</option>
-                    {% endfor %}
-                </select>
-                <input type="hidden" id="url" value="{{ absolute_url(path("requete_ajax")) }}">
-
-                <label for="inscription_group">Selectionnez le groupe du camp</label>
-                <select name="inscription_groupe" id="inscription_groupe" class="form-control" required>
-                </select>
-
-                <input type="hidden" name="inscription_region" value="{{ region.slug }}">
-                <input type="hidden" name="inscription_scout" value="{{ scout.slug }}">
-                <input type="hidden" name="inscription_activite" value="{{ activite.id }}">
-
-                <div class="mt-3 mb-5">Participation: <strong><span style="font-size: 1.7rem; color: red">{{ montant|number_format(0,'','.') }}</span> FCFA</strong></div>
-                
-                <button class="btn btn-primary">S'inscrire</button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </form>
+            <!-- Breadcrumb End -->
+        </div>
+    </section>
+    <section class="section contactus-section" id="participation">
+        <div class="container">
+            <div class="wow fadeInUp" data-wow-duration="1.0s">
+                <div class="title-section">
+                    <div class="subtitle-hr d-flex align-items-center">
+                        <h6 class="subtitle theme-color text-uppercase position-relative">Participation</h6>
+                        <hr>
+                    </div>
+                    <h2 class="title text-md-left text-center f-40">Je m'inscris au Jambognan 2021</h2>
+                </div>
+                <form class="common-input-form mt-3"  action="{{ absolute_url(path('app_inscription')) }}" id="inscription" name="inscription" method="post">
+                    <div class="row form-group">
+                        <div class="col-md-6 mb-3">
+                            <label for="">Matricule</label>
+                            <input type="text" class="form-control border-0"  name="inscription_matricule" value="{{ scout.matricule }}" readonly>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="">Carte</label>
+                            <input type="text" class="form-control border-0"  name="inscription_carte" value="{{ scout.carte }}" readonly>
+                        </div>
+                        <div class="col-md-5 mb-3">
+                            <label for="">Nom</label>
+                            <input type="text" class="form-control border-0" name="inscription_nom" value="{{ scout.nom }}" readonly>
+                        </div>
+                        <div class="col-md-7 mb-3">
+                            <label for="">Prenoms</label>
+                            <input type="text" class="form-control border-0" name="inscription_prenom" value="{{ scout.prenoms }}" readonly>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                            <label for="">Sexe</label>
+                            <input type="text" class="form-control border-0" name="inscription_sexe" value="{{ scout.sexe }}" readonly>
+                        </div>
+                        <div class="col-md-3 mb-3">
+                            <label for="">Date de naissance</label>
+                            <input type="text" class="form-control border-0" name="inscription_date_naissance" value="{{ scout.dateNaiss }}" readonly>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="">Lieu de naissance</label>
+                            <input type="text" class="form-control border-0" name="inscription_lieu_naissance" value="{{ scout.lieuNaiss }}" readonly>
+                        </div>
+                        <div class="col-md-12 mb-3">
+                            <label for="">Fonction</label>
+                            <input type="text" class="form-control border-0" name="inscription_fonction" value="{{ scout.fonction }}" readonly>
+                        </div>
+                        <div class="col-md-6 mb-3">
+                            <label for="inscription_district">District <span style="color: red; font-weight: 700;">*</span></label>
+                            <select name="district" id="inscription_district" class="form-control" required>
+                                <option value="">--</option>
+                                {% for district in districts %}
+                                    <option value="{{ district.id }}">{{ district.nom }}</option>
+                                {% endfor %}
+                            </select>
+                        </div>
+                        <input type="hidden" id="url" value="{{ absolute_url(path("requete_ajax")) }}">
+                        <div class="col-md-6 mb-3">
+                            <label for="inscription_groupe">Groupe <span style="color: red; font-weight: 700;">*</span></label>
+                            <select name="inscription_groupe" id="inscription_groupe" class="form-control" required>
+                            </select>
+                        </div>
+                        <input type="hidden" name="inscription_region" value="{{ region.slug }}">
+                        <input type="hidden" name="inscription_scout" value="{{ scout.slug }}">
+                        <input type="hidden" name="inscription_activite" value="{{ activite.id }}">
 
-    </div>
+                        <div class="col mt-3 mb-5 text-center">
+                            Participation: <strong><span style="font-size: 1.7rem; color: red; font-weight: 800;">{{ montant|number_format(0,'','.') }}</span> FCFA</strong>
+                        </div>
+
+
+                    </div>
+                    <div class="d-flex justify-content-end">
+                        <button class="mt-2 btn theme-btn contact-form-btn border-0" value="Send">S'INSCRIRE</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </section>
+    <div id="loader"></div>
+
+{% endblock %}
+{% block stylesheets %}
+    {{ parent() }}
+    <style>
+        .contactus-section input.form-control {
+            height: 38px;
+            font-weight: bold;
+            font-size: 1.1rem;
+            color: darkblue;
+        }
+    </style>
 {% endblock %}
 {% block javascripts %}
     {{ parent() }}
