--- a/templates/home/_search_form.html.twig
+++ b/templates/home/_search_form.html.twig
@@ -1,9 +1,14 @@
-{{ form_start(form)}}
-<div class="row form-group">
-    <div class="col-sm-8">{{ form_row(form.matricule) }}</div>
-    <div class="col-sm-4">
-        {{form_widget(form)}}
-        <button class="btn btn-primary">Rechercher</button>
+{{ form_start(form,{'attr':{'class':'contact_form mt-md-4'}})}}
+<div class="row">
+    <div class="col-lg-6 offset-lg-3 mt-5">
+        <div class="input-group mb-3">
+            <div class="input-group-append">
+                {{ form_widget(form.matricule) }}
+                {{form_widget(form)}}
+                <button type="submit" class="btn theme-btn contact-form-btn border-0" type="button" id="button-addon2"><i class="fa btn-search"></i>Rechercher</button>
+            </div>
+        </div>
     </div>
 </div>
+
 {{form_end(form)}}
