--- a/templates/style.html.twig
+++ b/templates/style.html.twig
@@ -16,7 +16,7 @@
         height: 100%;
         width: 100%;
         z-index: 0;
-        background-color: rgba({{ couleurRGB }}, 0.8);
+        background-color: rgba(0, 0, 0, 0.6);
     }
     .theme-btn{
         width: 100%;
