--- a/templates/bassam/menu_bassam.html.twig
+++ b/templates/bassam/menu_bassam.html.twig
@@ -1,12 +1,12 @@
 <div class="container">
-    <a class="navbar-brand brand-logo mr-4" href="{{ absolute_url(path('yopougon_index')) }}">
-        <img src="{{ absolute_url(asset('/assets/fontend/images/region/yop_light.png')) }}" class="img-fluid logo-light" alt="" width="150">
-        <img src="{{ absolute_url(asset('/assets/fontend/images/region/yop_dark.png')) }}" class="img-fluid logo-dark" alt="" width="150">
+    <a class="navbar-brand brand-logo mr-4" href="{{ absolute_url(path('bassam_index')) }}">
+        <img src="{{ absolute_url(asset('/assets/fontend/images/region/bassam_light.png')) }}" class="img-fluid logo-light" alt="" width="150">
+        <img src="{{ absolute_url(asset('/assets/fontend/images/region/bassam_dark.png')) }}" class="img-fluid logo-dark" alt="" width="150">
     </a>
     <div class="navbar-collapse collapse justify-content-end mr-3" id="navbarCollapse">
         <ul class="navbar-nav navbar-center">
             <li class="nav-item active">
-                <a href="{{ absolute_url(path('yopougon_index') )}}" class="nav-link text-white text-uppercase">Accueil</a>
+                <a href="{{ absolute_url(path('bassam_index') )}}" class="nav-link text-white text-uppercase">Accueil</a>
             </li>
             <li class="nav-item">
                 <a href="#participation" class="nav-link text-white transition text-uppercase">Je participe</a>
