--- a/templates/bassam/inscription.html.twig
+++ b/templates/bassam/inscription.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ parent()}} Inscription au camp{% endblock %}
 
 {% block menu %}
-    {{ include('abidjan/menu_abidjan.html.twig') }}
+    {{ include('bassam/menu_bassam.html.twig') }}
 {% endblock %}
 {% block style %}
     {{ include('style.html.twig',{'couleurRGB': config.rgb, 'couleurTheme': config.theme, 'bg': config.bg}) }}
@@ -35,7 +35,7 @@
                         <h6 class="subtitle theme-color text-uppercase position-relative">Participation</h6>
                         <hr>
                     </div>
-                    <h2 class="title text-md-left text-center f-40">Je m'inscris au Jambognan 2021</h2>
+                    <h2 class="title text-md-left text-center f-40">Je m'inscris au {{ activite.nom }}</h2>
                 </div>
                 <form class="common-input-form mt-3"  action="{{ absolute_url(path('app_inscription')) }}" id="inscription" name="inscription" method="post">
                     <div class="row form-group">
