--- a/templates/home/_search_form.html.twig
+++ b/templates/home/_search_form.html.twig
@@ -10,5 +10,21 @@
         </div>
     </div>
 </div>
+<div class="row d-md-none">
+    <div class="col-sm-6 mt-3 text-left">
+        <a href="">J'ai oublié mon matricule</a>
+    </div>
+    <div class="col-sm-6 mt-3 text-left">
+        <a href="https://adhesion.scoutascci.org/adhesion/inscription/nouvelle/">Je n'ai pas encore de matricule</a>
+    </div>
+</div>
+<div class="row ">
+    <div class="col-md-6 mt-3 text-right d-none d-md-block">
+        <a href="">J'ai oublié mon matricule</a>
+    </div>
+    <div class="col-md-6 mt-3 text-left d-none d-md-block">
+        <a href="https://adhesion.scoutascci.org/adhesion/inscription/nouvelle/" target="_blank">Je n'ai pas encore de matricule</a>
+    </div>
+</div>
 
 {{form_end(form)}}
