--- a/templates/layout.html.twig
+++ b/templates/layout.html.twig
@@ -13,7 +13,7 @@
             <link href="https://fonts.googleapis.com/css2?family=Poppins:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400&amp;display=swap" rel="stylesheet">
             <link rel="stylesheet" href="{{ absolute_url(asset('/assets/fontend/css/animate.css')) }}">
             <link rel="stylesheet" href="{{ absolute_url(asset('/assets/fontend/css/style.css')) }}">
-
+            <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
         {% endblock %}
         {% block style %}{% endblock %}
 
@@ -63,7 +63,14 @@
             <script charset="utf-8" src="https://www.cinetpay.com/cdn/seamless_sdk/latest/cinetpay.prod.min.js" type="text/javascript"></script>
             <script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
             <script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
-
+            <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+            <script src="https://npmcdn.com/flatpickr/dist/l10n/fr.js"></script>
+            <script>
+                $(".datepicker").flatpickr({
+                    dateFormat:"Y-m-d",
+                    locale: 'fr'
+                });
+            </script>
         {% endblock %}
     </body>
 </html>
