--- a/templates/home/_search_civil_form.html.twig
+++ b/templates/home/_search_civil_form.html.twig
@@ -14,7 +14,7 @@
 </div>
 <div class="row d-md-none">
     <div class="col-sm-6 mt-5 text-left">
-        <a href="{{ path('app_search_civil', {'region': region.slug}) }}">J'ai oublié mon matricule</a>
+        <a href="{{ path('app_search_matricule', {'region': region.slug}) }}#participation">Je m'inscris avec mon matricule</a>
     </div>
     <div class="col-sm-6 mt-3 text-left">
         <a href="https://adhesion.scoutascci.org/adhesion/inscription/nouvelle/">Je n'ai pas encore de matricule</a>
@@ -22,7 +22,7 @@
 </div>
 <div class="row ">
     <div class="col-md-6 mt-5 text-right d-none d-md-block">
-        <a href="{{ path('app_search_civil', {'region': region.slug}) }}">J'ai oublié mon matricule</a>
+        <a href="{{ path('app_search_matricule', {'region': region.slug}) }}#participation">Je m'inscris avec mon matricule</a>
     </div>
     <div class="col-md-6 mt-5 text-left d-none d-md-block">
         <a href="https://adhesion.scoutascci.org/adhesion/inscription/nouvelle/" target="_blank">Je n'ai pas encore de matricule</a>
