--- a/templates/abidjan/index.html.twig
+++ b/templates/abidjan/index.html.twig
@@ -18,8 +18,8 @@
                     <div class="item">
                         <div class="row align-items-center">
                             <div class="col-sm-12 d-md-none mb-5">
-                                <div class="banner-img-02">
-                                    <img src="{{ absolute_url(asset('/assets/ascci.png')) }}" class="img-fluid" alt="">
+                                <div class="banner-img-02 text-center">
+                                    <img src="{{ absolute_url(asset('/assets/fontend/images/region/logo/abidjan.png')) }}" class="img-fluid" alt="" width="250">
                                 </div>
                             </div>
                             <div class="col-lg-7">
@@ -37,7 +37,7 @@
                             </div>
                             <div class="col-lg-5 d-none d-md-block">
                                 <div class="banner-img-02">
-                                    <img src="{{ absolute_url(asset('/assets/ascci.png')) }}" class="img-fluid" alt="">
+                                    <img src="{{ absolute_url(asset('/assets/fontend/images/region/logo/abidjan.png')) }}" class="img-fluid" alt="">
                                 </div>
                             </div>
                         </div>
