--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -16,7 +16,8 @@
                         <ul>
                             <li>Abidjan <code><a href="{{ absolute_url(path('abidjan_index')) }}">Jambognan</a></code></li>
                             <li>Yopougon <code><a href="{{ absolute_url(path('yopougon_index')) }}">Pow Wow</a></code></li>
-                            <li>Grand Bassam <code><a href="{{ absolute_url(path('bassam_index')) }}">N'GAmonou</a></code></li>
+                            <li>Grand Bassam <code><a href="{{ absolute_url(path('bassam_index')) }}">N'Gamonou</a></code></li>
+                            <li>Daloa <code><a href="{{ absolute_url(path('daloa_index')) }}">Agbeninhou</a></code></li>
                             <li>Backend <code><a href="{{ absolute_url(path('backend_activite_index')) }}">Activite</a></code></li>
                             <li>Backend <code><a href="{{ absolute_url(path('backend_config_index')) }}">Config</a></code></li>
                         </ul>
