Gestion San Pedro

--- a/templates/sanpedro/inscription.html.twig
+++ b/templates/sanpedro/inscription.html.twig
@@ -3,7 +3,7 @@
 {% block title %}{{ parent()}} Inscription au camp{% endblock %}
 
 {% block menu %}
-    {{ include('daloa/menu_daloa.html.twig') }}
+    {{ include('sanpedro/menu_sanpedro.html.twig') }}
 {% endblock %}
 {% block style %}
     {{ include('style.html.twig',{'couleurRGB': config.rgb, 'couleurTheme': config.theme, 'bg': config.bg}) }}
