--- a/templates/yopougon/menu_yopougon.html.twig
+++ b/templates/yopougon/menu_yopougon.html.twig
@@ -12,12 +12,12 @@
                 <a href="#participation" class="nav-link text-white transition text-uppercase">Je participe</a>
             </li>
             <li class="nav-item">
-                <a href="#Features" class="nav-link text-white transition text-uppercase">Mon Badge</a>
+                <a href="{{ absolute_url(path('app_badge_matricule',{'regionSlug': region.slug})) }}#badge" class="nav-link text-white transition text-uppercase">Mon Badge</a>
             </li>
         </ul>
     </div>
     <div class="contact_btn">
-        <a href="#Contactus" class="btn theme-btn text-capitalize d-flex justify-content-center align-items-center">Mon Badge</a>
+        <a href="{{ absolute_url(path('app_badge_matricule',{'regionSlug': region.slug})) }}#badge" class="btn theme-btn text-capitalize d-flex justify-content-center align-items-center">Mon Badge</a>
         <button class="navbar-toggler ml-2 p-0 mb-0" type="button" data-toggle="collapse" data-target="#navbarCollapse" aria-controls="navbarCollapse" aria-expanded="false" aria-label="Toggle navigation">
             <i class="mdi mdi-menu"></i>
         </button>
