--- a/templates/home/badge.html.twig
+++ b/templates/home/badge.html.twig
@@ -271,7 +271,7 @@
             </div>
             <div class="row mt-1">
                 <div class="col-12 col-sm-12 text-center logo">
-                    <img src="abidjan.png" alt="" width="120">
+                    <img src="{{ absolute_url(asset('/assets/fontend/images/region/logo/'~ scout.config_logo)) }}" alt="" width="120">
                 </div>
             </div>
             <div class="row mt-2">
