--- a/templates/home/_search_badge_by_matricule_form.html.twig
+++ b/templates/home/_search_badge_by_matricule_form.html.twig
@@ -16,7 +16,7 @@
                                 <div class="col-lg-12 mt-5">
                                     <div class="form-group">
                                         <div class="position-relative">
-                                            <i class="login-icon mdi mdi-account green-color"></i>
+                                            <i class="login-icon mdi mdi-account" style="color: {{ config.theme }}"></i>
                                             {{ form_widget(form.matricule) }}
                                         </div>
                                     </div>
