--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,6 +14,17 @@
         </div>
     {% endif %}
 
+    {% for label, messages in app.flashes(['success', 'warning']) %}
+        {% for message in messages %}
+            <div class="alert alert-{{ label }} alert-dismissible mg-b-0 fade show" role="alert">
+                {{ message }}
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
+            </div>
+        {% endfor %}
+    {% endfor %}
+
     <div class="form-group row">
         <div class="col-12">
             <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" placeholder="Nom utilisateur" required autofocus>
