Gestion du password

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -3,47 +3,51 @@
 {% block title %}Log in!{% endblock %}
 
 {% block body %}
-<form method="post" class="form-horizontal m-t-20 mb-0">
-    {% if error %}
-        <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
-    {% endif %}
+<div class="text-center pt-3">
+    <a href="{{ absolute_url(path('backend_dashboard') )}}"> CONNEXION</a>
+</div>
+<div class="px-3 pb-3">
+    <form method="post" class="form-horizontal m-t-20 mb-0">
+        {% if error %}
+            <div class="alert alert-danger">{{ error.messageKey|trans(error.messageData, 'security') }}</div>
+        {% endif %}
 
-    {% if app.user %}
-        <div class="mb-3">
-            You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
-        </div>
-    {% endif %}
-
-    {% for label, messages in app.flashes(['success', 'warning']) %}
-        {% for message in messages %}
-            <div class="alert alert-{{ label }} alert-dismissible mg-b-0 fade show" role="alert">
-                {{ message }}
-                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-                    <span aria-hidden="true">&times;</span>
-                </button>
+        {% if app.user %}
+            <div class="mb-3">
+                You are logged in as {{ app.user.username }}, <a href="{{ path('app_logout') }}">Logout</a>
             </div>
+        {% endif %}
+
+        {% for label, messages in app.flashes(['success', 'warning']) %}
+            {% for message in messages %}
+                <div class="alert alert-{{ label }} alert-dismissible mg-b-0 fade show" role="alert">
+                    {{ message }}
+                    <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                        <span aria-hidden="true">&times;</span>
+                    </button>
+                </div>
+            {% endfor %}
         {% endfor %}
-    {% endfor %}
 
-    <div class="form-group row">
-        <div class="col-12">
-            <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" placeholder="Nom utilisateur" required autofocus>
+        <div class="form-group row">
+            <div class="col-12">
+                <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" autocomplete="username" placeholder="Nom utilisateur" required autofocus>
+            </div>
         </div>
-    </div>
 
-    <div class="form-group row">
-        <div class="col-12">
-            <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" placeholder="Mot de passe" required>
+        <div class="form-group row">
+            <div class="col-12">
+                <input type="password" name="password" id="inputPassword" class="form-control" autocomplete="current-password" placeholder="Mot de passe" required>
+            </div>
         </div>
-    </div>
 
 
 
-    <input type="hidden" name="_csrf_token"
-           value="{{ csrf_token('authenticate') }}"
-    >
+        <input type="hidden" name="_csrf_token"
+               value="{{ csrf_token('authenticate') }}"
+        >
 
-    {#
+        {#
         Uncomment this section and add a remember_me option below your firewall to activate remember me functionality.
         See https://symfony.com/doc/current/security/remember_me.html
 
@@ -52,13 +56,15 @@
                 <input type="checkbox" name="_remember_me"> Remember me
             </label>
         </div>
-    #}
+        #}
 
-    <div class="form-group text-right row m-t-20">
-        <div class="col-12">
-            <button class="btn btn-primary btn-raised btn-block waves-effect waves-light" type="submit">Se connecter</button>
+        <div class="form-group text-right row m-t-20">
+            <div class="col-12">
+                <button class="btn btn-primary btn-raised btn-block waves-effect waves-light" type="submit">Se connecter</button>
+            </div>
         </div>
-    </div>
 
-</form>
+    </form>
+</div>
+
 {% endblock %}
