Gestion des utilisateur

--- a/templates/backend/index.html.twig
+++ b/templates/backend/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backend_layout.html.twig' %}
 
-{% block title %}{{ parent() }}Hello BackendController!{% endblock %}
+{% block title %}{{ parent() }} Système Integré des Camps de region{% endblock %}
 
 {% block body %}
     <div class="wrapper dashborad-h">
