--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -143,7 +143,7 @@
                                 <ul>
                                     <li><a href="#">Jeunes</a></li>
                                     <li><a href="#">Adultes</a></li>
-                                    <li><a href="#">Tous</a></li>
+                                    <li><a href="{{ path('backend_participant_index') }}">Tous</a></li>
                                 </ul>
                             </li>
                         </ul>
