--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -19,8 +19,7 @@
                             <li>Grand Bassam <code><a href="{{ absolute_url(path('bassam_index')) }}">N'Gamonou</a></code></li>
                             <li>San Pedro <code><a href="{{ absolute_url(path('sanpedro_index')) }}">Sirouamle</a></code></li>
                             <li>Daloa <code><a href="{{ absolute_url(path('daloa_index')) }}">Agbeninhou</a></code></li>
-                            <li>Backend <code><a href="{{ absolute_url(path('backend_activite_index')) }}">Activite</a></code></li>
-                            <li>Backend <code><a href="{{ absolute_url(path('backend_config_index')) }}">Config</a></code></li>
+                            <li>Backend <code><a href="{{ absolute_url(path('backend_dashboard')) }}">Backend</a></code></li>
                         </ul>
                     </div>
                 </div>
