MAJ Backend participant

--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -1,6 +1,6 @@
 {% extends 'security_layout.html.twig' %}
 
-{% block title %}Log in!{% endblock %}
+{% block title %}{{ parent() }} Connexion{% endblock %}
 
 {% block body %}
 <div class="text-center pt-3">
