--- a/templates/home/index.html.twig
+++ b/templates/home/index.html.twig
@@ -9,16 +9,16 @@
             <div class="col-md-8 offset-md-2">
 
                 <div class="row">
-                    <div class="col-md-8">
+                    <div class="col-md-8 offset-md-2">
                         <img src="{{ absolute_url(asset('assets/carte.png')) }}" alt="" class="img-fluid" width="200%">
                     </div>
-                    <div class="col-md-4 mt-5">
+                    <div class="col-md-12 mt-5 text-center">
                         <ul>
-                            <li>Abidjan <code><a href="{{ absolute_url(path('abidjan_index')) }}">Jambognan</a></code></li>
+                            <!--<li>Abidjan <code><a href="{{ absolute_url(path('abidjan_index')) }}">Jambognan</a></code></li>
                             <li>Yopougon <code><a href="{{ absolute_url(path('yopougon_index')) }}">Pow Wow</a></code></li>
                             <li>Grand Bassam <code><a href="{{ absolute_url(path('bassam_index')) }}">N'Gamonou</a></code></li>
                             <li>San Pedro <code><a href="{{ absolute_url(path('sanpedro_index')) }}">Sirouamle</a></code></li>
-                            <li>Daloa <code><a href="{{ absolute_url(path('daloa_index')) }}">Agbeninhou</a></code></li>
+                            <li>Daloa <code><a href="{{ absolute_url(path('daloa_index')) }}">Agbeninhou</a></code></li>-->
                             <li>Backend <code><a href="{{ absolute_url(path('backend_dashboard')) }}">Backend</a></code></li>
                         </ul>
                     </div>
