--- a/templates/backend_participant/index.html.twig
+++ b/templates/backend_participant/index.html.twig
@@ -39,7 +39,9 @@
                                             <td>{{ loop.index }}</td>
                                             <td>{{ liste.district }}</td>
                                             <td>{{ liste.groupe }}</td>
-                                            <td class="text-center">{{ liste.matricule }}</td>
+                                            <td class="text-center">
+                                                <a href="{{ path('backend_participant_show', {'matricule': liste.matricule}) }}" target="_blank">{{ liste.matricule }}</a>
+                                            </td>
                                             <td class="text-center">{{ liste.carte }}</td>
                                             <td>{{ liste.nom|upper }} {{ liste.prenom|title }}</td>
                                             <td class="text-center">{{ liste.sexe }}</td>
