--- a/templates/backend_participant/liste_admin.html.twig
+++ b/templates/backend_participant/liste_admin.html.twig
@@ -39,12 +39,15 @@
                                             <td>{{ loop.index }}</td>
                                             <td>{{ liste.region }}</td>
                                             <td>{{ liste.district }}</td>
-                                            <td class="text-center">{{ liste.matricule }}</td>
+                                            <td class="text-center">
+                                                <a href="{{ path('backend_participant_show', {'matricule': liste.matricule}) }}" target="_blank">{{ liste.matricule }}</a>
+                                            </td>
                                             <td class="text-center">{{ liste.carte }}</td>
                                             <td>{{ liste.nom|upper }} {{ liste.prenom|title }}</td>
                                             <td class="text-center">{{ liste.sexe }}</td>
                                             <td>{{ liste.fonction }}</td>
                                         </tr>
+
                                     {% endfor %}
                                     </tbody>
 
