--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -63,31 +63,7 @@
 
 
                     <li class="list-inline-item dropdown notification-list">
-                        <a class="nav-link dropdown-toggle arrow-none waves-effect" data-toggle="dropdown" href="#" role="button"
-                           aria-haspopup="false" aria-expanded="false">
-                            <i class="ti-bell noti-icon"></i>
-                            <span class="badge badge-success a-animate-blink noti-icon-badge">3</span>
-                        </a>
-                        <div class="dropdown-menu dropdown-menu-right dropdown-arrow dropdown-menu-lg">
-                            <div class="dropdown-item noti-title">
-                                <h5><span class="badge badge-danger float-right">87</span>Notification</h5>
-                            </div>
-
-                            <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                <div class="notify-icon bg-success"><i class="mdi mdi-account"></i></div>
-                                <p class="notify-details"><b>Amoikon Kanga Dieudonné</b><small class="text-muted">Assistant Commissaire National (ACN)</small></p>
-                            </a>
-
-                            <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                <div class="notify-icon bg-danger"><i class="mdi mdi-account"></i></div>
-                                <p class="notify-details"><b>Amoikon Ama Eden Marie-Immaculée</b><small class="text-muted">Louveteau (8-11 ans)</small></p>
-                            </a>
-
-                            <a href="javascript:void(0);" class="dropdown-item notify-item">
-                                Voir plus
-                            </a>
-
-                        </div>
+                        {{ render(url('app_notification_index')) }}
                     </li>
                     <li class="list-inline-item dropdown notification-list">
                         <div class="dropdown notification-list nav-pro-img">
