--- a/templates/backend_paiement/index.html.twig
+++ b/templates/backend_paiement/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'backend_layout.html.twig' %}
 
-{% block title %}{{ parent() }} Inscriptions du {{ periode.debut|date('d-m-Y') }} au {{ periode.fin|date('d-m-Y') }}{% endblock %}
+{% block title %}{{ parent() }} Liste des inscriptions {{ statut }} {% endblock %}
 
 {% block body %}
     <div class="wrapper">
@@ -9,7 +9,7 @@
             <div class="row">
                 <div class="col-sm-12 mt-5">
                     <div class="page-title-box">
-                        <h4 class="page-title">LISTE DES PARTICIPANTS</h4>
+                        <h4 class="page-title">LISTE DES INSCRIPTIONS {{ statut|upper }}</h4>
                     </div>
                 </div>
             </div>
@@ -18,13 +18,13 @@
                 <div class="col-sm-12 col-md-12">
                     <div class="card m-b-30">
                         <div class="card-body">
-                            <h5 class="header-title mb-3 mt-0 text-center">Les inscriptions du {{ periode.debut|date('d-m-Y') }} au {{ periode.fin|date('d-m-Y') }}</h5>
+                            <h5 class="header-title mb-3 mt-0 text-center">Les inscriptions {{ statut }}</h5>
                             <div class="table-responsive mt-5">
                                 <table id="liste" class="table table-striped table-bordered" cellspacing="0" width="100%">
                                     <thead>
                                     <tr>
                                         <th class="border-top-0 text-center">#</th>
-                                        <th class="border-top-0 text-center">REGION</th>
+                                        <th class="border-top-0 text-center">DISTRICT</th>
                                         <th class="border-top-0 text-center">MATRICULE</th>
                                         <th class="border-top-0 text-center">NOM & PRENOMS</th>
                                         <th class="border-top-0 text-center">FONCTION</th>
@@ -38,7 +38,7 @@
                                     {% for liste in listes %}
                                         <tr>
                                             <td>{{ loop.index }}</td>
-                                            <td>{{ liste.region }}</td>
+                                            <td>{{ liste.district }}</td>
                                             <td class="text-center">{{ liste.matricule }}</td>
                                             <td>{{ liste.nom|upper }} {{ liste.prenom|title }}</td>
                                             <td>{{ liste.fonction }}</td>
