--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -146,7 +146,7 @@
                             <ul class="submenu megamenu">
                                 <li>
                                     <ul>
-                                        <li><a href="#">Activités</a></li>
+                                        <li><a href="{{ path('backend_activite_index') }}">Activités</a></li>
                                         <li><a href="#">Config</a></li>
                                     </ul>
                                 </li>
