--- a/templates/backend_activite/_delete_form.html.twig
+++ b/templates/backend_activite/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('backend_activite_delete', {'id': activite.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('backend_activite_delete', {'id': activite.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette activité?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ activite.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Supprimer</button>
 </form>
