--- a/templates/backend_activite/index.html.twig
+++ b/templates/backend_activite/index.html.twig
@@ -1,47 +1,116 @@
-{% extends 'base.html.twig' %}
+{% extends 'backend_layout.html.twig' %}
 
-{% block title %}Activite index{% endblock %}
+{% block title %}{{ parent() }} Gestion des activités{% endblock %}
 
 {% block body %}
-    <h1>Activite index</h1>
+    <div class="wrapper">
+        <div class="container-fluid">
 
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Id</th>
-                <th>Nom</th>
-                <th>Montant</th>
-                <th>Lieu</th>
-                <th>Debut</th>
-                <th>Fin</th>
-                <th>Logo</th>
-                <th>CreatedAt</th>
-                <th>actions</th>
-            </tr>
-        </thead>
-        <tbody>
-        {% for activite in activites %}
-            <tr>
-                <td>{{ activite.id }}</td>
-                <td>{{ activite.nom }}</td>
-                <td>{{ activite.montant }}</td>
-                <td>{{ activite.lieu }}</td>
-                <td>{{ activite.debut }}</td>
-                <td>{{ activite.fin }}</td>
-                <td>{{ activite.logo }}</td>
-                <td>{{ activite.createdAt ? activite.createdAt|date('Y-m-d H:i:s') : '' }}</td>
-                <td>
-                    <a href="{{ path('backend_activite_show', {'id': activite.id}) }}">show</a>
-                    <a href="{{ path('backend_activite_edit', {'id': activite.id}) }}">edit</a>
-                </td>
-            </tr>
-        {% else %}
-            <tr>
-                <td colspan="9">no records found</td>
-            </tr>
-        {% endfor %}
-        </tbody>
-    </table>
+            <div class="row">
+                <div class="col-sm-12 mt-5">
+                    <div class="page-title-box">
+                        <h4 class="page-title">GESTION DES ACTIVITES</h4>
+                    </div>
+                </div>
+            </div>
 
-    <a href="{{ path('backend_activite_new') }}">Create new</a>
+            <div class="row">
+                <div class="col-sm-12 col-md-9">
+                    <div class="card m-b-30">
+                        <div class="card-body">
+                            <h5 class="header-title mb-3 mt-0">Liste</h5>
+                            <div class="table-responsive mt-5">
+                                <table id="liste" class="table table-striped table-bordered" cellspacing="0" width="100%">
+                                    <thead>
+                                    <tr>
+                                        <th class="border-top-0 text-center">#</th>
+                                        <th class="border-top-0 text-center">LOGO</th>
+                                        <th class="border-top-0 text-center">REGION</th>
+                                        <th class="border-top-0 text-center">NOM</th>
+                                        <th class="border-top-0 text-center">LIEU</th>
+                                        <th class="border-top-0 text-center">MONTANT</th>
+                                        <th class="border-top-0 text-center">PERIODE</th>
+                                    </tr>
+                                    </thead>
+                                    <tbody>
+                                    {% for activite in activites %}
+                                        <tr>
+                                            <td class="text-right">{{ loop.index }}</td>
+                                            <td class="text-center"><img class="rounded-circle" src="{{ absolute_url(asset('/upload/activite/'~ activite.logo)) }}" alt="user" width="30"></td>
+                                            <td>
+                                                <a href="{{ path('backend_activite_edit', {'id': activite.id}) }}">{{ activite.region.nom }}</a>
+
+                                            </td>
+                                            <td>{{ activite.nom }}</td>
+                                            <td>{{ activite.lieu }}</td>
+                                            <td class="text-center">{{ activite.montant }}</td>
+                                            <td class="text-center">{{ activite.debut|date('Y/m/d') }} - {{ activite.fin|date('Y/m/d') }}</td>
+                                        </tr>
+                                    {% endfor %}
+                                    </tbody>
+                                </table>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-sm-12 col-md-3">
+                    <div class="card m-b-30">
+                        <div class="card-body">
+                            <h5 class="header-title mb-3 mt-O">Enregistrement</h5>
+                            <div class="mt-5">
+                                {{ include('backend_activite/_form.html.twig') }}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </div>
+
+{% endblock %}
+
+{% block stylesheets %}
+    {{ parent() }}
+
+    <link rel="stylesheet" type="text/css" href="https://cdn.datatables.net/v/bs5/jq-3.3.1/dt-1.10.25/b-1.7.1/b-html5-1.7.1/datatables.min.css"/>
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/flatpickr/dist/flatpickr.min.css">
+    <link rel="stylesheet" href="{{ absolute_url(asset('/backoffice/plugins/dropify/css/dropify.min.css')) }}">
+{% endblock %}
+
+{% block javascripts %}
+    {{ parent() }}
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/5.0.1/js/bootstrap.bundle.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/pdfmake.min.js"></script>
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/pdfmake/0.1.36/vfs_fonts.js"></script>
+    <script type="text/javascript" src="https://cdn.datatables.net/v/bs5/jq-3.3.1/jszip-2.5.0/dt-1.10.25/b-1.7.1/b-colvis-1.7.1/b-html5-1.7.1/b-print-1.7.1/datatables.min.js"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/flatpickr"></script>
+    <script src="https://npmcdn.com/flatpickr/dist/l10n/fr.js"></script>
+    <script src="{{ absolute_url(asset('/backoffice/plugins/dropify/js/dropify.min.js')) }}"></script>
+    <script src="{{ absolute_url(asset('/backoffice/js/upload-init.js')) }}"></script>
+    <script>
+        $(document).ready(function() {
+            $('#liste').DataTable({
+                //"ajax": "data.txt",
+                "language": {
+                    "url": "//cdn.datatables.net/plug-ins/9dcbecd42ad/i18n/French.json"
+                },
+                dom: 'Bfrtip',
+                buttons: [
+                    'copyHtml5',
+                    'excelHtml5',
+                    'csvHtml5',
+                    'pdfHtml5'
+                ]
+            });
+        } );
+    </script>
+    <script>
+        $(".datepicker").flatpickr({
+            dateFormat:"Y-m-d",
+            locale: 'fr'
+        });
+    </script>
 {% endblock %}
