--- a/templates/backend_config/_delete_form.html.twig
+++ b/templates/backend_config/_delete_form.html.twig
@@ -1,4 +1,4 @@
-<form method="post" action="{{ path('backend_config_delete', {'id': config.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
+<form method="post" action="{{ path('backend_config_delete', {'id': config.id}) }}" onsubmit="return confirm('Voulez-vous vraiment supprimer cette configuration?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ config.id) }}">
-    <button class="btn">Delete</button>
+    <button class="btn btn-danger">Supprimer</button>
 </form>
