--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -147,7 +147,7 @@
                                 <li>
                                     <ul>
                                         <li><a href="{{ path('backend_activite_index') }}">Activités</a></li>
-                                        <li><a href="#">Config</a></li>
+                                        <li><a href="{{ path('backend_config_index') }}">Config</a></li>
                                     </ul>
                                 </li>
                             </ul>
