--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -148,6 +148,7 @@
                                     <ul>
                                         <li><a href="{{ path('backend_activite_index') }}">Activités</a></li>
                                         <li><a href="{{ path('backend_config_index') }}">Config</a></li>
+                                        <li><a href="{{ path('app_lien_region') }}">Liens</a></li>
                                     </ul>
                                 </li>
                             </ul>
