--- a/templates/style.html.twig
+++ b/templates/style.html.twig
@@ -1,6 +1,6 @@
 <style>
     .bg-header {
-        background-image: url({{ absolute_url(asset('/assets/fontend/images/region/bg/'~ bg)) }});
+        background-image: url({{ absolute_url(asset('/upload/config/'~ bg)) }});
         background-repeat: no-repeat;
         background-size: cover;
         background-attachment: fixed;
