--- a/templates/backend_layout.html.twig
+++ b/templates/backend_layout.html.twig
@@ -198,6 +198,65 @@
 <script src="{{ absolute_url(asset('/backoffice/js/waves.js')) }}"></script>
 <script src="{{ absolute_url(asset('/backoffice/js/jquery.nicescroll.js')) }}"></script>
 <script src="{{ absolute_url(asset('/backoffice/js/jquery.scrollTo.min.js')) }}"></script>
+<script>
+    // topbar menu toggle for mobile/smaller devices
+    var mobileToggle = $('#mobileToggle');
+    var mobileToggle = $('#mobileToggle');
+    var fullScreenToggle = $("#btn-fullscreen");
+    var menuItems = $(".navigation-menu>li");
+    var menuSubItems = $(".navigation-menu li.has-submenu a[href='#']");
+    var navigationMenuItems = $(".navigation-menu a");
+
+    mobileToggle.on('click', function (e) {
+        $(this).toggleClass('open');
+        $('#navigation').slideToggle(400);
+        return false;
+    });
+
+    // menu items
+    menuItems.slice(-1).addClass('last-elements');
+
+    menuSubItems.on('click', function (e) {
+        if ($(window).width() < 992) {
+            e.preventDefault();
+            $(this).parent('li').toggleClass('open').find('.submenu:first').toggleClass('open');
+        }
+    });
+
+    //activate menu item by url
+    navigationMenuItems.each(function () {
+        if (this.href == window.location.href) {
+            $(this).parent().addClass("active"); // add active to li of the current link
+            $(this).parent().parent().parent().addClass("active"); // add active class to an anchor
+            $(this).parent().parent().parent().parent().parent().addClass("active"); // add active class to an anchor
+        }
+    });
+
+    //toggle full screen
+    var toggleFullscreen = function (e) {
+        fullScreenToggle.on("click", function (e) {
+            e.preventDefault();
+            if (!document.fullscreenElement && /* alternative standard method */ !document.mozFullScreenElement && !document.webkitFullscreenElement) {  // current working methods
+                if (document.documentElement.requestFullscreen) {
+                    document.documentElement.requestFullscreen();
+                } else if (document.documentElement.mozRequestFullScreen) {
+                    document.documentElement.mozRequestFullScreen();
+                } else if (document.documentElement.webkitRequestFullscreen) {
+                    document.documentElement.webkitRequestFullscreen(Element.ALLOW_KEYBOARD_INPUT);
+                }
+            } else {
+                if (document.cancelFullScreen) {
+                    document.cancelFullScreen();
+                } else if (document.mozCancelFullScreen) {
+                    document.mozCancelFullScreen();
+                } else if (document.webkitCancelFullScreen) {
+                    document.webkitCancelFullScreen();
+                }
+            }
+            return false;
+        });
+    };
+</script>
 
 {% block javascripts %}{% endblock %}
 
